2023-12-06 Se sube info de inventario.

--- a/CódigoFuente/BitacorasProduccion/Views/CI_conteo_inventario/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CI_conteo_inventario/Index.cshtml
@@ -116,51 +116,52 @@
                                         <thead>
                                             <tr>
                                                 <th>Acciones</th>
-                                                @*<th>
-                                                    @Html.DisplayNameFor(model => model.centro)
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.plant)
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.almacen)
+                                                    @Html.DisplayNameFor(model => model.storage_location)
                                                 </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.ubicacion)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.articulo)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.material)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.lote)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.no_bobina)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.sap_cantidad)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.libre_utilizacion)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.bloqueado)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.control_calidad)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.unidad_base_medida)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.altura)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.espesor)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.peso)
-                                                </th>*@
+                                                @*
+        <th>
+            @Html.DisplayNameFor(model => model.ubicacion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.articulo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.material)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.lote)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.no_bobina)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.sap_cantidad)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.libre_utilizacion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.bloqueado)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.control_calidad)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.unidad_base_medida)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.altura)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.espesor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.peso)
+        </th>*@
 
                                             </tr>
                                         </thead>
@@ -173,51 +174,52 @@
                                                             <i class="fa-regular fa-pen-to-square"></i>
                                                         </button>
                                                     </td>
-                                                    @*<td>
-                                                        @Html.DisplayFor(modelItem => item.centro)
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.plant)
                                                     </td>
                                                     <td>
-                                                        @Html.DisplayFor(modelItem => item.almacen)
+                                                        @Html.DisplayFor(modelItem => item.storage_location)
                                                     </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.ubicacion)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.articulo)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.material)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.lote)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.no_bobina)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.sap_cantidad)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.libre_utilizacion)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.bloqueado)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.control_calidad)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.unidad_base_medida)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.altura)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.espesor)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.peso)
-                                                    </td>*@
+                                                    @*
+        <td>
+            @Html.DisplayFor(modelItem => item.ubicacion)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.articulo)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.material)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.lote)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.no_bobina)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.sap_cantidad)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.libre_utilizacion)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.bloqueado)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.control_calidad)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.unidad_base_medida)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.altura)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.espesor)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.peso)
+        </td>*@
 
                                                 </tr>
                                             }
@@ -225,51 +227,52 @@
                                         <tfoot>
                                             <tr>
                                                 <th>Acciones</th>
-                                                @*<th>
-                                                    @Html.DisplayNameFor(model => model.centro)
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.plant)
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.almacen)
+                                                    @Html.DisplayNameFor(model => model.storage_location)
                                                 </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.ubicacion)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.articulo)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.material)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.lote)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.no_bobina)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.sap_cantidad)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.libre_utilizacion)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.bloqueado)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.control_calidad)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.unidad_base_medida)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.altura)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.espesor)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.peso)
-                                                </th>*@
+                                                @*
+        <th>
+            @Html.DisplayNameFor(model => model.ubicacion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.articulo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.material)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.lote)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.no_bobina)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.sap_cantidad)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.libre_utilizacion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.bloqueado)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.control_calidad)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.unidad_base_medida)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.altura)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.espesor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.peso)
+        </th>*@
                                             </tr>
                                         </tfoot>
                                     </table>
@@ -398,21 +401,21 @@
                 columnDefs: [{ width: '10px' }],
                 "columns": [
                     { "data": "acciones" },
-                    { "data": "centro" },
-                    { "data": "almacen" },
-                    { "data": "ubicacion" },
-                    { "data": "articulo" },
-                    { "data": "material" },
-                    { "data": "lote" },
-                    { "data": "no_bobina" },
-                    { "data": "sap_cantidad" },
-                    { "data": "libre_utilizacion" } ,
-                    { "data": "bloqueado" },
-                    { "data": "control_calidad" },
-                    { "data": "unidad_base_medida" },
-                    { "data": "altura" },
-                    { "data": "espesor" },
-                    { "data": "peso" }
+                    { "data": "plant" },
+                    { "data": "storage_location" },
+                    //{ "data": "ubicacion" },
+                    //{ "data": "articulo" },
+                    //{ "data": "material" },
+                    //{ "data": "lote" },
+                    //{ "data": "no_bobina" },
+                    //{ "data": "sap_cantidad" },
+                    //{ "data": "libre_utilizacion" } ,
+                    //{ "data": "bloqueado" },
+                    //{ "data": "control_calidad" },
+                    //{ "data": "unidad_base_medida" },
+                    //{ "data": "altura" },
+                    //{ "data": "espesor" },
+                    //{ "data": "peso" }
                 ],
                 dom: "Bfrtip", //necesario para los botoners
                 buttons: [
@@ -553,13 +556,14 @@
         stop = true;
     }
 
-    function cargaTabla() {
+        function cargaTabla() {
+          
                     $.ajax({
                 type: 'POST',
                 url: '/@ViewBag.ControllerName/CargaTabla',
                 data: { },
-                success: function (data) {
-
+                        success: function (data) {
+                          
                     table.clear();
                     for (var i = 0; i < data.data.length; i++) {
                         table.row.add(data.data[i]);
@@ -567,7 +571,10 @@
 
                     table.draw(true);
 
-                },
+                        },
+                        error: function (jqXHR, textStatus, errorThrown) {
+                            console.log(errorThrown)
+                        },
                 async: true
                     });
 
